# llama-index-kawn

./: README.md  pyproject.toml
llama_index/readers/kawn/: __init__.py  base.py
llama_index_integration/embeddings/: __init__.py
llama_index_integration/embeddings/kawn/: __init__.py  base.py
llama_index_integration/readers/: __init__.py
llama_index_integration/readers/kawn/: __init__.py  base.py
tests/: test_embedding.py  test_reader.py
