[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llama-index-kawn"
version = "0.1.0"
description = "LlamaIndex Integration for Kawn AI (Basser Reader & Tbyaan Embeddings)"
authors = ["Misraj AI <hennara@misraj.ai>"]
readme = "README.md"
packages = [
    { include = "llama_index" }
]

[tool.poetry.dependencies]
python = ">=3.9"
llama-index-core = ">=0.10.0"
kawn.ai = ">=0.1.0" # Replace with your actual SDK version/name on PyPI
