[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-index-kawn"
version = "0.1.1"
authors = [
  { name="Khalil Hennara", email="hennara@misraj.ai" },
]
description = "LlamaIndex Integration for Kawn AI (Basser Reader & Tbyaan Embeddings)"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
requires-python = ">=3.9"

dependencies = [
    "llama-index-core>=0.10.0",
    "kawn.ai>=0.1.0" # Replace with your actual SDK version/name on PyPI

]

[project.urls]
Homepage = "https://kawn.ai/en"
Source = "https://github.com/misraj-ai/llama-index-kawn"
